remove old FleetCommand